--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -44,7 +44,7 @@ WORKDIR ../../portage
 RUN mkdir build
 WORKDIR build
 RUN cmake -D CMAKE_BUILD_TYPE=Debug -D CMAKE_PREFIX_PATH=$TANGRAM_DIR \ 
-    -D ENABLE_UNIT_TESTS=True -D ENABLE_APP_TESTS=True 
+    -D ENABLE_UNIT_TESTS=True -D ENABLE_APP_TESTS=True \ 
     -D ENABLE_MPI=${MPI} -D ENABLE_MPI_CXX_BINDINGS=True \
     ${COVERAGE:+-DENABLE_COVERAGE_BUILD=ON} -D ENABLE_DOXYGEN=True \
     -D TANGRAM_DIR=$TANGRAM_DIR ..
