Relocate operator references

--- a/portage/support/CMakeLists.txt
+++ b/portage/support/CMakeLists.txt
@@ -14,7 +14,7 @@ set(support_HEADERS
     weight.h
     basis.h
     operator.h
-    test_operator_data.h
+    operator_references.h
     faceted_setup.h
     PARENT_SCOPE
 )
