--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -32,14 +32,28 @@ RUN git submodule update --init --recursive
 RUN git checkout v0.9.7 
 RUN mkdir build
 WORKDIR build
-ENV TANGRAM_DIR /home/portage/tangram/install 
-RUN cmake -D CMAKE_BUILD_TYPE=Debug -D CMAKE_INSTALL_PREFIX=$TANGRAM_DIR \ 
+ENV TANGRAM_INSTALL_DIR /home/portage/tangram/install 
+RUN cmake -D CMAKE_BUILD_TYPE=Debug \ 
+    -D CMAKE_INSTALL_PREFIX=$TANGRAM_INSTALL_DIR \ 
     -D ENABLE_UNIT_TESTS=True \
     -D ENABLE_APP_TESTS=True -D ENABLE_MPI=${MPI} \
     -D ENABLE_MPI_CXX_BINDINGS=True .. 
 RUN make && make test 
 RUN make install
-RUN echo $TANGRAM_DIR
+RUN ls -l $TANGRAM_INSTALL_DIR
+
+#Build XMOF2D
+WORKDIR ../..
+RUN git clone https://github.com/laristra/XMOF2D.git
+WORKDIR XMOF2D
+RUN mkdir build
+WORKDIR build
+ENV XMOF2D_INSTALL_DIR /home/portage/XMOF2D/install
+RUN cmake -D CMAKE_BUILD_TYPE=Debug \
+    -D CMAKE_CXX_FLAGS:STRING="-std=c++11" \ 
+    -D INSTALL_DIR:FILEPATH=$XMOF2D_INSTALL_DIR ..  
+RUN make && make install 
+RUN ls -l $XMOF2D_INSTALL_DIR 
 
 # Build Portage
 WORKDIR ../../portage
@@ -49,7 +63,8 @@ RUN cmake -D CMAKE_BUILD_TYPE=Debug -D CMAKE_PREFIX_PATH=$TANGRAM_DIR \
     -D ENABLE_UNIT_TESTS=True -D ENABLE_APP_TESTS=True \ 
     -D ENABLE_MPI=${MPI} -D ENABLE_MPI_CXX_BINDINGS=True \
     ${COVERAGE:+-DENABLE_COVERAGE_BUILD=ON} -D ENABLE_DOXYGEN=True \
-    -D TANGRAM_DIR=$TANGRAM_DIR \
+    -D TANGRAM_DIR=$TANGRAM_INSTALL_DIR \
+    -D XMOF2D_DIR=$XMOF2D_INSTALL_DIR/share/cmake
     -D Jali_DIR:FILEPATH=$JALI_DIR/lib ..
 RUN make VERBOSE=1 -j2
 RUN make test
