Add missing backslash

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -64,7 +64,7 @@ RUN cmake -D CMAKE_BUILD_TYPE=Debug -D CMAKE_PREFIX_PATH=$TANGRAM_DIR \
     -D ENABLE_MPI=${MPI} -D ENABLE_MPI_CXX_BINDINGS=True \
     ${COVERAGE:+-DENABLE_COVERAGE_BUILD=ON} -D ENABLE_DOXYGEN=True \
     -D TANGRAM_DIR=$TANGRAM_INSTALL_DIR \
-    -D XMOF2D_DIR=$XMOF2D_INSTALL_DIR/share/cmake
+    -D XMOF2D_DIR=$XMOF2D_INSTALL_DIR/share/cmake \
     -D Jali_DIR:FILEPATH=$JALI_DIR/lib ..
 RUN make VERBOSE=1 -j2
 RUN make test
