specifying cmake dir for jali configs

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -67,7 +67,7 @@ RUN cmake -D CMAKE_BUILD_TYPE=Debug -D CMAKE_PREFIX_PATH=$TANGRAM_DIR \
     ${COVERAGE:+-DENABLE_COVERAGE_BUILD=ON} -D ENABLE_DOXYGEN=True \
     -D TANGRAM_DIR=$TANGRAM_INSTALL_DIR \
     -D XMOF2D_DIR=$XMOF2D_INSTALL_DIR/share/cmake \
-    -D Jali_DIR:FILEPATH=$JALI_DIR/lib ..
+    -D Jali_DIR:FILEPATH=$JALI_DIR/lib/cmake ..
 RUN make VERBOSE=1 -j2
 RUN make test
 RUN cd .. && if [ ${COVERAGE} ]; then \
