passing jali dir through cmake prefix

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -57,13 +57,14 @@ RUN ls -l $XMOF2D_INSTALL_DIR
 
 # Build Portage
 RUN echo $JALI_DIR
-RUN ls -l $JALI_DIR/lib/cmake
+RUN find $JALI_DIR -name JaliConfig.cmake
 WORKDIR ../../portage
 RUN mkdir build
 WORKDIR build
-RUN cmake -D CMAKE_BUILD_TYPE=Debug -D CMAKE_PREFIX_PATH=$TANGRAM_DIR \ 
+RUN cmake -D CMAKE_BUILD_TYPE=Debug \
+    -D CMAKE_PREFIX_PATH="$TANGRAM_INSTALL_DIR;$XMOF2D_INSTALL_DIR;$JALI_DIR" \ 
     -D ENABLE_UNIT_TESTS=True -D ENABLE_APP_TESTS=True \ 
-    -D ENABLE_MPI=${MPI} -D ENABLE_MPI_CXX_BINDINGS=True \
+    -D ENABLE_MPI=${MPI} \
     ${COVERAGE:+-DENABLE_COVERAGE_BUILD=ON} -D ENABLE_DOXYGEN=True \
     -D TANGRAM_DIR=$TANGRAM_INSTALL_DIR \
     -D XMOF2D_DIR=$XMOF2D_INSTALL_DIR/share/cmake \
