rework CMake structure for Portage

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -4,6 +4,7 @@ Please see the license file at the root of this repository, or at:
     https://github.com/laristra/portage/blob/master/LICENSE
 ]]
 
+# put this with individual targets
 include_directories(include)  # contains user_field.h for expression parsing
 
 add_subdirectory(apptest_cmp)
@@ -16,16 +17,16 @@ add_subdirectory(momentumapp)
 
 option(ENABLE_APP_TIMINGS "Enable timing in apps" OFF)
 
-if (Jali_DIR OR ENABLE_FleCSI)
+if (WONTON_ENABLE_Jali OR WONTON_ENABLE_FleCSI)
   add_subdirectory(portageapp)
-endif (Jali_DIR OR ENABLE_FleCSI)
+endif ()
 
-if (Jali_DIR)
+if (WONTON_ENABLE_Jali)
   add_subdirectory(timingapp)
   add_subdirectory(part-by-part)
   add_subdirectory(swept_face)
-endif (Jali_DIR)
+endif ()
 
-if (ENABLE_FleCSI)
+if (WONTON_ENABLE_FleCSI)
   add_subdirectory(flecsiapp)
-endif (ENABLE_FleCSI)
+endif ()
