--- a/config/portage-config.h.in
+++ b/config/portage-config.h.in
@@ -27,7 +27,7 @@ Please see the license file at the root of this repository, or at:
 
 // Is Portage compiled with TANGRAM support
 
-#cmakedefine HAVE_TANGRAM
+#cmakedefine PORTAGE_HAS_TANGRAM
 
 // Is PORTAGE linked with Jali
 
